Ripped the size out of simplenode, resulting in another slight performance boost
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1576 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -258,7 +258,7 @@
         </javac>
         <!-- execute the Japex performance tests -->
         <!--<property name="config" value="extensions/japex/ListEventAssembler-JapexConfig.xml"/>-->
-        <property name="config" value="extensions/japex/ListEventPublisher-JapexConfig.xml"/>
+        <property name="config" value="extensions/japex/SortedList-JapexConfig.xml"/>
         <java dir="." fork="true" classname="com.sun.japex.Japex">
             <classpath>
                 <fileset dir="${env.JAPEX_HOME}/lib/" includes="*.jar"/>
@@ -514,6 +514,7 @@
         <apply executable="m4" parallel="false">
             <arg line="--prefix-builtins"/>
             <arg line="-DVAR_COLOUR_COUNT=4"/>
+            <arg line="-DVAR_WIDE_NODES=true"/>
             <srcfile/>
             <fileset dir="${basedir}" includes="source/ca/odell/glazedlists/impl/adt/barcode2/Bcii*.java"/>
             <mapper refid="bcii_to_fourcolorintermediate"/>
@@ -542,6 +543,7 @@
         <apply executable="m4" parallel="false">
             <arg line="--prefix-builtins"/>
             <arg line="-DVAR_COLOUR_COUNT=1"/>
+            <arg line="-DVAR_WIDE_NODES=false"/>
             <srcfile/>
             <fileset dir="${basedir}" includes="source/ca/odell/glazedlists/impl/adt/barcode2/Bcii*.java"/>
             <mapper refid="bcii_to_simpleintermediate"/>
