--- a/build.xml
+++ b/build.xml
@@ -269,12 +269,19 @@
     </target>
 
     <target name="issuesbrowser" depends="core,swing,swt,jfreechart,jgoodiesforms,nachocalendar">
+        <mkdir dir="extensions/issuesbrowser/lib"/>
+        <java classname="ca.odell.glazedlists.impl.HttpClient">
+            <classpath path="classes"/>
+            <arg value="https://glazedlists.dev.java.net/files/documents/1073/37509/http.jar"/>
+            <arg value="extensions/issuesbrowser/lib/http.jar"/>
+        </java>
         <javac destdir="classes" srcdir="extensions/issuesbrowser/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
             <classpath>
                 <fileset dir="extensions/swt/lib/" includes="*.jar"/>
                 <fileset dir="extensions/jfreechart/lib/" includes="*.jar"/>
                 <fileset dir="extensions/jgoodiesforms/lib/" includes="*.jar"/>
                 <fileset dir="extensions/nachocalendar/lib/" includes="*.jar"/>
+                <fileset dir="extensions/issuesbrowser/lib/" includes="*.jar"/>
             </classpath>
         </javac>
     </target>
@@ -295,6 +302,7 @@
         <unjar src="extensions/jfreechart/lib/jfreechart.jar" dest="demojar"/>
         <unjar src="extensions/jgoodiesforms/lib/forms.jar" dest="demojar"/>
         <unjar src="extensions/nachocalendar/lib/nachocalendar.jar" dest="demojar"/>
+        <unjar src="extensions/issuesbrowser/lib/http.jar" dest="demojar"/>
 
         <!-- create a *minimal* set of classes required to execute the swing demo -->
         <classfileset id="demoClasses" dir="demojar" rootclass="com.publicobject.issuesbrowser.swing.IssuesBrowser"/>
