Updated jessewilson's section in the pom
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1603 696c4f5c-992c-4387-df9e-f6c076136008

--- a/pom.xml
+++ b/pom.xml
@@ -60,14 +60,13 @@
     </mailingLists>
     <developers>
         <developer>
-            <!-- TODO verify and complete -->
             <id>jessewilson</id>
             <name>Jesse Wilson</name>
-            <email/>
+            <email>jesse@swank.ca</email>
             <roles>
                 <role>Java developer</role>
             </roles>
-            <timezone/>
+            <timezone>PDT</timezone>
         </developer>
         <developer>
             <!-- TODO verify and complete -->
@@ -77,7 +76,7 @@
             <roles>
                 <role>Java developer</role>
             </roles>
-            <timezone/>
+            <timezone>PDT</timezone>
         </developer>
         <developer>
             <!-- TODO verify and complete -->
@@ -87,7 +86,7 @@
             <roles>
                 <role>Java developer</role>
             </roles>
-            <timezone/>
+            <timezone>EST</timezone>
         </developer>
         <developer>
             <!-- TODO verify and complete -->
