Faster ThreadProxyDriver ... it's much faster for large datasets but may be slightly slower for very small ones. I feel this is an overall improvement.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1616 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -300,8 +300,9 @@
     	<!--
         <property name="config" value="extensions/japex/ListEventAssembler-JapexConfig.xml"/>
         <property name="config" value="extensions/japex/ListEventPublisher-JapexConfig.xml"/>
-        -->
         <property name="config" value="extensions/japex/SortedList-JapexConfig.xml"/>
+        -->
+        <property name="config" value="extensions/japex/ThreadProxy-JapexConfig.xml"/>
         <java dir="." fork="true" classname="com.sun.japex.Japex">
             <classpath>
                 <fileset dir="extensions/japex/lib/" includes="*.jar"/>
