declawing treetable when generating java14 build
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1671 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -471,6 +471,13 @@
             <arg value="${java14_glazedlists.dir}/extensions/jgoodiesforms/source"/>
         </java>
 
+        <!-- Declaw treetable/ -->
+        <mkdir dir="${java14_glazedlists.dir}/extensions/treetable/source"/>
+        <java classname="com.publicobject.declawer.Declawer" classpath="tools/declawer.jar">
+            <arg value="extensions/treetable/source"/>
+            <arg value="${java14_glazedlists.dir}/extensions/treetable/source"/>
+        </java>
+
     	<!-- Declaw hibernate/ -->
         <mkdir dir="${java14_glazedlists.dir}/extensions/hibernate/source"/>
         <java classname="com.publicobject.declawer.Declawer" classpath="tools/declawer.jar">
