declawing treetable when generating java14 build
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1672 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -475,6 +475,7 @@
         <mkdir dir="${java14_glazedlists.dir}/extensions/treetable/source"/>
         <java classname="com.publicobject.declawer.Declawer" classpath="tools/declawer.jar">
             <arg value="extensions/treetable/source"/>
+            <arg value="${classes.dir}"/>
             <arg value="${java14_glazedlists.dir}/extensions/treetable/source"/>
         </java>
 
