--- a/build.xml
+++ b/build.xml
@@ -533,7 +533,7 @@
     <target name="upload" depends="dist,jar"
         description="Upload binaries to java.net, see http://javanettasks.dev.java.net/">
 
-        <!-- download the declawer build tool -->
+        <!-- download the javanettasks library for uploading jars to the java.net webserver -->
         <mkdir dir="tools"/>
         <java classname="ca.odell.glazedlists.impl.HttpClient">
             <classpath path="${classes.dir}"/>
